Fix(WP editor): Alignment of colour theme swatches in picker

--- a/src/block-editor-config.scss
+++ b/src/block-editor-config.scss
@@ -34,6 +34,10 @@ html :where(.wp-block) {
 	display: none !important;
 }
 
+.components-circular-option-picker__option-group.comet-color-controls {
+	flex-direction: row !important;
+}
+
 .block-list-appender {
 	margin: 0 auto;
 
